welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:11: error: type mismatch;
 found   : Unit
 required: Boolean
		if (((a>12 && a<20) && (b>12 && b<20) ))
                ^